[package]
authors = ["Igor Gulamov", "Roman Semenov"]
description = "Pedersen hash circuit demo for ethereum friendly curve"
license = "MIT/Apache-2.0"
name = "pedersen-test"
version = "0.0.1"
edition = "2018"

[dependencies]
rand = "0.4"

bellman_ce = { version = "0.3.0", default-features = false }
sapling-crypto_ce = { version = "0.0.5", default-features = false }

[features]
default = ["multicore"]
multicore = ["bellman_ce/multicore", "sapling-crypto_ce/multicore"]
